Fixed the navbar responsiveness to open a sidebar on tablet screens

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,6 +21,10 @@
     padding: 0;
 }
 
+body {
+    @apply min-h-[100vh]
+}
+
 /* General Styles */
 
 .max-width {
